[project]
name = "steam-utility-launcher"
version = "0.1.0"
description = "Launches utilities in the same proton prefix as a given game, allowing trainers and practice tools to function."
authors = [
    {name = "Jacob McIntosh",email = "nacitar.sevaht@gmail.com"}
]
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.11"
dependencies = [
    "vdf (>=3.4,<4.0)"
]

[tool.poetry]
packages = [{include = "steam_utility_launcher", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
flake8 = "^7.3.0"
isort = "^6.1.0"
mypy = "^1.19.0"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-magic-trailing-comma = true

[tool.isort]
line_length = 79
profile = "black"

[tool.mypy]
strict = true

[tool.poetry.scripts]
steam-utility-launcher = "steam_utility_launcher.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
